# lth_omop

./: README.md  config.py  external_models.yaml  mkdocs.yml  pyproject.toml  sample.env
.claude/: CLAUDE.md
.github/: copilot-instructions.md
docs/: OPTIMIZATION_PLAN.md  README.md  SUBTASKS_FOR_ISSUES.md  SUMMARY.md  index.md
ignored/: cdc__updated_at_clone.py  src_flex__procedure_event.sql  src_flex__visit_segment.sql
ignored/cdc/: cdc__updated_at.sql  cdc__updated_at_final.sql  cdc_bi__referrals.sql  (+13 more)
macros/: before_after.py  source_to_concept_map.py  utils.py
models/: models_overview.md  sources.yml
notebooks/: dbt_log_assessor.ipynb  dbt_to_sqlmesh.ipynb
seeds/: cdc__updated_at_default.csv  flex__admission_source.csv  flex__blood_mappings.csv  flex__decoded.csv  flex__devices.csv  flex__discharge_destination.csv  flex__drug_routes.csv  flex__drugs_mappings.csv  flex__job_role.csv  flex__medical_specialty.csv  flex__observations_mappings.csv  flex__patient_demographics.csv  flex__radiology_mappings.csv  flex__referral_priority.csv  flex__referrals.csv  flex__unit_mappings.csv  flex__unit_mappings_bloods.csv  local__id_generation.csv  scr__field_mappings.csv  scr__grade_of_differentiation.csv  scr__results.csv  swisslab__anatomical_site_mappings.csv  swisslab__antibiotic_sensitivities.csv  swisslab__bacteria_observation.csv  swisslab__bacteria_presence.csv  swisslab__bacteriology_misc.csv  swisslab__invalid_results.csv  swisslab__locations.csv  swisslab__misc_test.csv  swisslab__misc_test_result.csv  swisslab__site_mappings.csv  web__gp_practices.csv
(+281 files in other folders)
