[project]
name = "lth-omop"
version = "0.1.0"
description = "LTH OMOP Source to Bronze ETL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "sqlmesh[lsp,mssql,web]~=0.230",
    "sqlalchemy",
    "pyodbc",
]

[dependency-groups]
dev = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.7",
    "pre-commit~=4.5",
    "ruff>=0.15.0",
]
